--- a/sk/src/components/Foot.css
+++ b/sk/src/components/Foot.css
@@ -2,6 +2,8 @@
     width:100%;
     background-color: rgba(128, 128, 128, 0.486);
     padding:12px 0px;
+    position: absolute;
+    bottom:0;
 }
 .foot p{
     text-align: center;
